--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                   <nav class="main-menu ">
                     <ul class="menu-area-main">
                       <li class="active"> <a href="{% url "inicio" %}">Home</a> </li>
-                      <li> <a href="{% url "listapreguntas" %}">Encuesta</a> </li>
+                      <li> <a href="{% url "encuesta" %}">Encuesta</a> </li>
                       <li> <a href="{% url "inicio" %}">Contactenos</a> </li>
 
                      </ul>
@@ -62,12 +62,12 @@
                         <div class="form-group">
                         <ul class="list">
 
-                        <li class="list-group-item-primary">Evaluar el grado de madurez digital de empresas del sector agrícolas, mediante un modelo que permita medir el nivel de transformación digital. Para la evaluación de los ítems presentados se evaluaran las preguntas en un rango del 1 al 5, siendo 1 la expresión de la mínima satisfacción y el 5 la máxima satisfacción.</li>
+                        <li class="list-group-item-primary"> Evaluar el grado de madurez digital de empresas del sector agrícolas, mediante un modelo que permita medir el nivel de transformación digital. Para la evaluación de los ítems presentados se evaluaran las preguntas en un rango del 1 al 5, siendo 1 la expresión de la mínima satisfacción y el 5 la máxima satisfacción.</li>
                         </li>
 
                         </ul>
                             </div>
-                       <a href="{% url "listapreguntas" %}">Ir a la encuesta</a>
+                       <a href="{% url "encuesta" %}">Ir al diagnóstico digital</a>
                     </div>
                   </div>
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
