--- a/templates/plan1dim4.html
+++ b/templates/plan1dim4.html
@@ -54,11 +54,13 @@
   </head>
 <body>
 <div class="form-group">
+        <div class="text-center">
         <H1>  Plan de acción Digitalización de Procesos </H1>
+        </div>
     <H3> Principiante a Intermedio </H3>
 </div>
 <div class="form-group">
-    <h5>Desde que se inició la agricultura, hace miles de años, los avances técnicos y tecnológicos han sido constantes. La tecnología va de la mano de la agricultura, pues desde siempre el agricultor ha procurado facilitar la ardua labor que implica el campo. Desde el arado de vertedera a los tractores, la tecnología en la agricultura supone avances y mejoras en la eficiencia de tu explotación. Por lo tanto, el potencial de las nuevas tecnologías es un factor que debemos valorar y tener en cuenta para la digitalización de procesos.
+    <h5>   <p class="p-5 bg-secondary text-white">Desde que se inició la agricultura, hace miles de años, los avances técnicos y tecnológicos han sido constantes. La tecnología va de la mano de la agricultura, pues desde siempre el agricultor ha procurado facilitar la ardua labor que implica el campo. Desde el arado de vertedera a los tractores, la tecnología en la agricultura supone avances y mejoras en la eficiencia de tu explotación. Por lo tanto, el potencial de las nuevas tecnologías es un factor que debemos valorar y tener en cuenta para la digitalización de procesos.
 La digitalización es compleja porque requiere tiempo, dedicación, y muchas veces atención al detalle y otras capacidades que tú ni tu equipo no tienen por qué tener, sobre todo si eres el o la dueña de la empresa. Por eso generalmente recomendamos que las empresas que adoptan este tipo de cambio digital pidan ayuda a expertos. Existen dos formas de resolverlo:
 1.Un equipo interno dedicado y capacitado además de especialistas contratados para este proyecto de digitalización.
 2.Una empresa externa que digitaliza los procesos de punta a punta.
