--- a/templates/plan2dim3.html
+++ b/templates/plan2dim3.html
@@ -54,11 +54,13 @@
   </head>
  <body>
 <div class="form-group">
+            <div class="text-center">
         <H1>  Plan de acción Procesamiento de datos </H1>
+            </div>
     <H3> Intermedio a experimentado </H3>
 </div>
 <div class="form-group">
-    <h5>La implementación y uso de digitalización en las entidades en general otorgan la posibilidad de conocer, a través de la generación y análisis de datos, información de la gestión de la empresa y orientar así la toma de decisiones. El análisis de los datos obtenidos permite conocer características del predio, seguimiento y mayor exactitud en los recursos administrados, además de nuevas necesidades del mercado, entre otras cosas.
+    <h5><p class="p-5 bg-secondary text-white">La implementación y uso de digitalización en las entidades en general otorgan la posibilidad de conocer, a través de la generación y análisis de datos, información de la gestión de la empresa y orientar así la toma de decisiones. El análisis de los datos obtenidos permite conocer características del predio, seguimiento y mayor exactitud en los recursos administrados, además de nuevas necesidades del mercado, entre otras cosas.
 
 El nivel intermedio indica que se inició un proceso de obtención de datos para el posterior análisis, pero se debe potenciar este recurso a través de la adquisición o sustitución de herramientas que capten datos esto se traducirá en información fácil de interpretar, de manera que mejore la administración de los recursos, se ahorre tiempo y dinero
 
