--- a/templates/plan2dim4.html
+++ b/templates/plan2dim4.html
@@ -54,11 +54,13 @@
   </head>
 <body>
 <div class="form-group">
+        <div class="text-center">
         <H1>  Plan de acción Digitalización de Procesos </H1>
+        </div>
     <H3> Intermedio a Experimentado </H3>
 </div>
 <div class="form-group">
-    <h5>Un punto muy importante para la integración de la tecnología es saber cuál tecnología o herramienta aplicar, sabiendo que hay diversas tendencias a elegir para tomar una decisión en la automatización o mejora de procesos.
+    <h5>   <p class="p-5 bg-secondary text-white">Un punto muy importante para la integración de la tecnología es saber cuál tecnología o herramienta aplicar, sabiendo que hay diversas tendencias a elegir para tomar una decisión en la automatización o mejora de procesos.
 Diagnóstica y prioriza los procesos importantes; Conoce en qué estado digital están tus actuales procesos y prácticas. Para eso te recomendamos hacer una lista de todas las acciones de las distintas áreas que componen a tu empresa. Esta lista será tu inventario, te permitirá reconocer dónde está presente y ausente el uso de tecnologías y prácticas digitales.
 Siempre es recomendable realizar una comparación con la competencia, ósea las empresas que operan en un mismo mercado y mismo sector, ya que se pueden obtener distintas ventajas; como comprender dónde se posiciona su negocio en el mercado y encontrar mejores oportunidades. Para lograr esto le recomendamos realizar una comparación entre sus competidores e ítems web (plataforma de e-commerce, pasando por las campañas de display, redes sociales, landing page, google Ads, etc) que tengan en común con su organización.
 
