--- a/templates/plan3dim1.html
+++ b/templates/plan3dim1.html
@@ -56,10 +56,12 @@
 
   <body>
 <div class="form-group">
-        <H1>  Uso de Tecnologías digitales </H1>.
+    <div class="text-center">
+        <H1>  Uso de Tecnologías digitales </H1>
+        </div>
 </div>
 <div class="form-group">
-    <h5> Para pasar al siguiente nivel se debe elaborar y definir una estrategia digital que logre satisfacer las ambiciones de la empresa en el ámbito tecnológico, además de tener a disposición todas las herramientas tecnológicas claves para cumplir con la estrategia digital, e innovar en desarrollo de nuevas herramientas que ayuden en todas las áreas de la empresa.
+    <h5> <p class="p-5 bg-secondary text-white"> Para pasar al siguiente nivel se debe elaborar y definir una estrategia digital que logre satisfacer las ambiciones de la empresa en el ámbito tecnológico, además de tener a disposición todas las herramientas tecnológicas claves para cumplir con la estrategia digital, e innovar en desarrollo de nuevas herramientas que ayuden en todas las áreas de la empresa.
 Esto se puede llevar a cabo elaborando una estrategia digital entre los directivos guiados por un profesional o bien integrar a toda la organización en la elaboración de esta estrategia para que se visibilice e interiorice de una manera más ágil en toda la organización.
 
 </h5>
