--- a/templates/plan3dim2.html
+++ b/templates/plan3dim2.html
@@ -54,12 +54,14 @@
   </head>
  <body>
 <div class="form-group">
-        <H1>  Plan Estratégico </H1>
-     <H3>  Formulación de la estrategia (experimentado a experto) </H3>
+    <div class="text-center">
+        <H1>  Planes Estratégicos </H1>
+        </div>
+     <H4>  Formulación de la estrategia (experimentado a experto) </H4>
 </div>
 <div class="form-group">
     <h5>
-
+<p class="p-5 bg-secondary text-white">
 El primer paso para formar una estrategia es revisar la información obtenida del análisis. Determinar qué recursos tiene la empresa actualmente que puedan ayudar a alcanzar las metas y objetivos definidos. Identificar cualquier área de la que se deban buscar recursos externos.
 Los problemas que enfrenta la empresa deben ser priorizados por su importancia para tener éxito. Una vez priorizado, comienza a formular la estrategia. Debido a que las situaciones empresariales y económicas son fluidas, es crítico en esta etapa desarrollar enfoques alternativos que apunten a cada paso del plan, es muy importante ser ordenado y metódico ya que es uno de los mayores desafíos al momento de formular la estrategia.
 
