--- a/templates/plan3dim4.html
+++ b/templates/plan3dim4.html
@@ -54,11 +54,13 @@
   </head>
 <body>
 <div class="form-group">
+        <div class="text-center">
         <H1>  Plan de acción Digitalización de Procesos </H1>
+        </div>
     <H3> Experimentado a Experto </H3>
 </div>
 <div class="form-group">
-    <h5>Debemos recalcar que a estas alturas se debe presentar un dominio sobre las herramientas tecnológicas que se seleccionaron para la automatización o digitalización de procesos, para que así los servicios empleados otorguen un conocimiento preciso y detallado, dando lugar a un control constante de la situación. Las habilidades tecnológicas son un punto considerable y van acompañadas con el dominio sobre las herramientas, el dominio de determinadas habilidades digitales resulta imperativo, independientemente de la extensión de las explotaciones. La redefinición de las funciones, combinando automatización e intervención humana, caracterizará el trabajo del futuro.
+    <h5>   <p class="p-5 bg-secondary text-white">Debemos recalcar que a estas alturas se debe presentar un dominio sobre las herramientas tecnológicas que se seleccionaron para la automatización o digitalización de procesos, para que así los servicios empleados otorguen un conocimiento preciso y detallado, dando lugar a un control constante de la situación. Las habilidades tecnológicas son un punto considerable y van acompañadas con el dominio sobre las herramientas, el dominio de determinadas habilidades digitales resulta imperativo, independientemente de la extensión de las explotaciones. La redefinición de las funciones, combinando automatización e intervención humana, caracterizará el trabajo del futuro.
 Dado el uso de las herramientas tecnológicas, se aconseja redactar un manual de protocolización sobre la herramienta aplicada, para que sea más sencillo su uso y sea una herramienta más didáctica ya que de esta manera se puede utilizar por una cantidad mayor de personal y su capacitación será más eficiente en términos de los recursos utilizados.
 
 </h5>
