--- a/templates/plan4dim1.html
+++ b/templates/plan4dim1.html
@@ -56,10 +56,12 @@
 
   <body>
 <div class="form-group">
-        <H1>  Uso de Tecnologías digitales </H1>.
+     <div class="text-center">
+        <H1>  Uso de Tecnologías digitales </H1>
+        </div>
 </div>
 <div class="form-group">
-    <h5>
+    <h5> <p class="p-5 bg-secondary text-white">
 Para pasar al siguiente nivel la estrategia digital tiene que estar completamente alineada a los objetivos de la empresa esto se puede lograr implementando un Cuadro de mando Integral (CMMI) que ayudará a alinear completamente a la empresa, automatizar herramientas digitales y seguir capacitando al personal en la medida que la empresa vaya avanzando y adquiriendo experiencia, así se le agrega valor competitivo a la empresa, logrando eficiencia en todas sus áreas.
 Es recomendable que la empresa cuente con un profesional que maneje esta herramienta o bien acudir a un asesor externo para que su uso sea óptimo y aporte todos los beneficios a la organización de manera eficaz, la integración de este tipo de herramientas en la organización es muy importante ya que se posicionara como líder y competitivo en el rubro agrícola.
 </h5>
