--- a/templates/plan4dim2.html
+++ b/templates/plan4dim2.html
@@ -54,11 +54,13 @@
   </head>
  <body>
 <div class="form-group">
-        <H1>  Plan Estratégico </H1>.
-     <H3>  Implementación de la estrategia (experto a líder) </H3>
+    <div class="text-center">
+        <H1>  Planes Estratégicos </H1>
+        </div>
+     <H4>  Implementación de la estrategia (experto a líder) </H4>
 </div>
 <div class="form-group">
-    <h5>
+    <h5> <p class="p-5 bg-secondary text-white">
 La implementación exitosa de la estrategia es fundamental para el éxito de la empresa. Esta es la etapa de acción del proceso de gestión estratégica. Si la estrategia general no funciona con la estructura actual del negocio, se debe instalar una nueva estructura al comienzo de esta etapa.
 Todos dentro de la organización deben estar claros de sus responsabilidades y deberes, y cómo esto está alineado con la meta general. Además, todos los recursos o fondos para la empresa deben estar garantizados en este momento. Una vez que el financiamiento está en su lugar y los empleados están listos, ejecuta el plan.
 
