--- a/templates/plan4dim3.html
+++ b/templates/plan4dim3.html
@@ -54,11 +54,14 @@
   </head>
 <body>
 <div class="form-group">
+            <div class="text-center">
         <H1>  Plan de acción Procesamiento de datos </H1>
+            </div>
     <H3> Experto a líder </H3>
 </div>
 <div class="form-group">
-    <h5>La implementación y uso de digitalización en las entidades en general otorgan la posibilidad de conocer, a través de la generación y análisis de datos, información de la gestión de la empresa y orientar así la toma de decisiones. El análisis de los datos obtenidos permite conocer características del predio, seguimiento y mayor exactitud en los recursos administrados, además de nuevas necesidades del mercado, entre otras cosas.
+
+    <h5><p class="p-5 bg-secondary text-white">La implementación y uso de digitalización en las entidades en general otorgan la posibilidad de conocer, a través de la generación y análisis de datos, información de la gestión de la empresa y orientar así la toma de decisiones. El análisis de los datos obtenidos permite conocer características del predio, seguimiento y mayor exactitud en los recursos administrados, además de nuevas necesidades del mercado, entre otras cosas.
 
 El nivel experto indica que se está en un nivel óptimo y se reconocen los aportes que se generan con la generación, obtención y posterior análisis de datos para la optimización de todos los recursos, haciendo un aporte de vital importancia para el cuidado de la tierra explotada y se pueda seguir haciendo una mejora continua en cada etapa de la cadena de valor.
 
