--- a/templates/plan4dim4.html
+++ b/templates/plan4dim4.html
@@ -54,11 +54,13 @@
   </head>
 <body>
 <div class="form-group">
+        <div class="text-center">
         <H1>  Plan de acción Digitalización de Procesos </H1>
+        </div>
     <H3> Experto a líder </H3>
 </div>
 <div class="form-group">
-    <h5>
+    <h5>   <p class="p-5 bg-secondary text-white">
         Para este nivel la empresa debe considerar alinear esta transformación con la estrategia digital, ya que un equipo alineado que conoce los objetivos de negocio y trabaja hacia el rumbo adecuado, será sin duda un mejor equipo. La alienación promueve que ese conjunto de personas alcance su verdadero potencial, puesto que la razón de existir del equipo es lograr un propósito común.
 Debemos considerar que esta transformación implica múltiples desafíos que existirán en el camino como; Alinear ejecutivos y gestores, alinear áreas de negocio y de soporte, aprovechar la tecnología para facilitar la adaptación. No abordar estos desafíos, que es lo que tradicionalmente ocurre al quedarnos en el plano conceptual del diseño de la estrategia, generaría una brecha entre la estrategia de negocio y las capacidades de Tecnologías de la Información (TI).
 La arquitectura empresarial corrige periódicamente esa desviación de la siguiente forma: Estructurando TI para posibilitar el cambio empresarial, soportando de forma óptima la estrategia de negocio. Así pues, la arquitectura empresarial es el proceso de estructuración de las Tecnologías de la Información (TI) para posibilitar el cambio empresarial, soportando de forma óptima la estrategia de negocio.
