--- a/templates/basetemplate.html
+++ b/templates/basetemplate.html
@@ -10,9 +10,11 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <!-- site metas -->
   <title>Modelo de Madurez digital Agricola</title>
+
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
+
   <!-- fevicon -->
   <link rel="icon" href="{% static "Agrodigital/fevicon.png" %} " type="image/gif" />
   <!-- bootstrap css -->
@@ -37,10 +39,19 @@
   <div class="loader_bg">
     <div class="loader"><img src="{% static "Agrodigital/images/loading.gif" %}" alt="#" /></div>
   </div>
+
+    <div class="form-group">
+
+    </div>
+
   <!-- end loader -->
 
   {% block contenido %}
   {% endblock %}
+
+    <div class="form-group">
+
+    </div>
 
     <!--  footer -->
     <footr>
@@ -57,12 +68,12 @@
                     <h3>Address </h3>
                     <ul class="lista de preguntas">
                       <li>
-                        <a href="{% url "listapreguntas" %}" ></a>Universidad Catolica del norte
+                        <a href="{% url "encuesta" %}" ></a>Universidad Católica del Norte
                         <br> Seminario en Sistemas de información  </li>
                         <li>
-                          <a href="{% url "listapreguntas" %}"></a> </li>
+                          <a href="{% url "encuesta" %}"></a> </li>
                           <li>
-                            <a href="{% url "listapreguntas" %}"></a>Luciano Manfredi - Carlos Ramos - Jose Castillo</li>
+                            <a href="{% url "encuesta" %}"></a>Luciano Manfredi - Carlos Ramos - Jose Castillo</li>
                           </ul>
                         </div>
                       </div>
