--- a/templates/plan1dim1.html
+++ b/templates/plan1dim1.html
@@ -39,6 +39,9 @@
      </div>
      <!-- end header inner -->
 
+ <div class="form-group">
+
+                   </div>
 <div>
     <!doctype html>
 <html lang="en">
@@ -51,13 +54,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
    </head>
+ <div class="form-group">
 
+                   </div>
   <body>
 <div class="form-group">
-        <H1>  Uso de Tecnologías digitales </H1>.
+
+    <div class="text-center">
+        <H1>  Uso de Tecnologías digitales </H1>
+        </div>
 </div>
 <div class="form-group">
-    <h5>
+
+        <h5>     <p class="p-5 bg-secondary text-white">
 Para pasar al siguiente nivel se tiene que elaborar instructivos y procedimientos claros y estandarizados sobre el uso de tecnología digital en cada proceso de la empresa, además de tener al personal en constante capacitación para integrar de buena manera herramientas a la empresa, esto puede llevarse a cabo con la captación de un profesional experto en calidad y elaboración de documentos, además de lograr alianzas y participar activamente en colaboración con organismos gubernamentales que presten capacitación en el ámbito tecnológico o aporten financiamiento las cuales pueden ser Sercotec, Sense, Otec, Otic, entre otras.
 
 </h5>
