--- a/templates/plan1dim2.html
+++ b/templates/plan1dim2.html
@@ -41,11 +41,15 @@
 
  <body>
 <div class="form-group">
-        <H1>  Plan Estratégico </H1>
-    <H3> Establecimiento de metas (principiante a intermedio)</H3>
+    <div class="text-center">
+        <H1>  Planes Estratégicos </H1>
+        </div>
+</div>
+    <H4> Establecimiento de metas (principiante a intermedio)</H4>
 </div>
 <div class="form-group">
-    <h5>
+
+    <h5>  <p class="p-5 bg-secondary text-white">
 Cómo establecer objetivos y estrategias de negocio. El propósito de establecer metas es aclarar la visión del negocio. Esta etapa consiste en identificar tres facetas: En primer lugar, definir los objetivos a corto y largo plazo. En segundo lugar, identificar el proceso de cómo lograr los objetivos.
 
 Por último, personalizar el proceso de acuerdo al personal, dar a cada integrante una tarea con la que pueda tener éxito. Durante este proceso los objetivos deben ser detallados, realistas y coincidir con los valores de la visión de negocio. Finalmente, dar a conocer estas metas y objetivos a todo el personal para que se sientan integrados a la organización.
