--- a/templates/plan1dim3.html
+++ b/templates/plan1dim3.html
@@ -54,11 +54,13 @@
   </head>
 <body>
 <div class="form-group">
+        <div class="text-center">
         <H1>  Plan de acción Procesamiento de datos </H1>
     <H3> principiante a intermedio </H3>
+        </div>
 </div>
 <div class="form-group">
-    <h5>La implementación y uso de digitalización en las entidades en general otorgan la posibilidad de conocer, a través de la generación y análisis de datos, información de la gestión de la empresa y orientar así la toma de decisiones. El análisis de los datos obtenidos permite conocer características del predio, seguimiento y mayor exactitud en los recursos administrados, además de nuevas necesidades del mercado, entre otras cosas.
+    <h5><p class="p-5 bg-secondary text-white">La implementación y uso de digitalización en las entidades en general otorgan la posibilidad de conocer, a través de la generación y análisis de datos, información de la gestión de la empresa y orientar así la toma de decisiones. El análisis de los datos obtenidos permite conocer características del predio, seguimiento y mayor exactitud en los recursos administrados, además de nuevas necesidades del mercado, entre otras cosas.
 .
 Un nivel principiante indica que no se ha iniciado una implementación de darle un significado a la obtención y análisis de datos, por lo que se sugiere la implementación y uso de tecnologías digitales, ya que estas otorgan la posibilidad de conocer, a través de la generación y análisis de datos, para que la organización se familiarice con estos conceptos y los beneficios que pueden obtener de ellos.
 
