--- a/templates/plan1dim5.html
+++ b/templates/plan1dim5.html
@@ -54,7 +54,9 @@
   </head>
 <body>
 <div class="form-group">
+            <div class="text-center">
         <H1>  Plan de acciónpara Cultura y empleados</H1>
+            </div>
     <H3> Principiante a Intermedio </H3>
 </div>
 <div class="form-group">
