--- a/templates/plan2dim2.html
+++ b/templates/plan2dim2.html
@@ -56,6 +56,26 @@
 
 </header>
 
+
+<div class="form-group">
+    <div class="text-center">
+        <H1>  Planes Estratégicos </H1>
+        </div>
+     <H4>  Análisis (Intermedio a experimentado) </H4>
+</div>
+<div class="form-group">
+    <h5><p class="p-5 bg-secondary text-white">
+En esta etapa, recopila información y datos relevantes para lograr la visión de la empresa. El enfoque del análisis estratégico debe ser entender las necesidades del negocio como una entidad sostenible, con visión estratégica e identificar iniciativas que ayudarán al negocio a crecer.
+ Examina cualquier problema externo o interno que pueda afectar tus metas y objetivos. Asegúrate de identificar las fortalezas y debilidades de tu organización, así como las amenazas y oportunidades que puedan surgir a lo largo del camino, cuando estas estén claras utiliza una matriz FODA para generar distintas estrategias a seguir en la organización y comunícale a todos los miembros para que se tenga claro cuáles serán los caminos a seguir.
+
+</h5>
+</div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 <!-- about  -->
 
 <!-- end abouts -->
