--- a/templates/plan3dim3.html
+++ b/templates/plan3dim3.html
@@ -54,11 +54,13 @@
   </head>
 <body>
 <div class="form-group">
+            <div class="text-center">
         <H1>  Plan de acción Procesamiento de datos </H1>
+            </div>
     <H3>  Experimentado a experto </H3>
 </div>
 <div class="form-group">
-    <h5>La implementación y uso de digitalización en las entidades en general otorgan la posibilidad de conocer, a través de la generación y análisis de datos, información de la gestión de la empresa y orientar así la toma de decisiones. El análisis de los datos obtenidos permite conocer características del predio, seguimiento y mayor exactitud en los recursos administrados, además de nuevas necesidades del mercado, entre otras cosas.
+    <h5><p class="p-5 bg-secondary text-white">La implementación y uso de digitalización en las entidades en general otorgan la posibilidad de conocer, a través de la generación y análisis de datos, información de la gestión de la empresa y orientar así la toma de decisiones. El análisis de los datos obtenidos permite conocer características del predio, seguimiento y mayor exactitud en los recursos administrados, además de nuevas necesidades del mercado, entre otras cosas.
 
 El nivel experimentado indica que hay que Incorporar en toda la organización herramientas de recolección de datos, esto se hará sistemáticamente detectando y definiendo los procesos y tecnologías críticas, además de Incorporar una herramienta de procesamiento de datos para optimizar la toma de decisiones en los niveles altos de la empresa, una buena herramienta y recomendado es Power BI, por su baja complejidad de uso y su variedad de herramientas para la proyección de información, el uso de esta herramienta debe estar a cargo de personal capacitado para que la información obtenida sea analizada de buena manera.
 
