--- a/templates/plan2dim5.html
+++ b/templates/plan2dim5.html
@@ -54,11 +54,13 @@
   </head>
 <body>
 <div class="form-group">
+    <div class="text-center">
         <H1>  Plan de acción para Cultura y empleados </H1>
+        </div>
     <H3> Intermedio a Experimentado </H3>
 </div>
 <div class="form-group">
-    <h5>Una arista relevante para la correcta integración de la tecnología es elegir herramientas simples y fáciles de implementar, para este proceso de adaptación tecnológica lo mejor es utilizar herramientas fáciles y prácticas de usar. Esto te ayudará a evitar una batalla cuesta arriba contra la nueva tecnología y te ayudará a alcanzar tus metas más rápido.
+    <h5><p class="p-5 bg-secondary text-white">Una arista relevante para la correcta integración de la tecnología es elegir herramientas simples y fáciles de implementar, para este proceso de adaptación tecnológica lo mejor es utilizar herramientas fáciles y prácticas de usar. Esto te ayudará a evitar una batalla cuesta arriba contra la nueva tecnología y te ayudará a alcanzar tus metas más rápido.
 Se recomendable realizar una comparación con la competencia, en este caso en el ámbito de cómo formar o capacitar a los miembros de un equipo, darle especial atención y seguimiento a la forma de capacitar, de qué forma capacitan, que software utilizan, que contenidos de aprendizaje visualmente atractivos poseen, etc.
 Aportar feedback de forma regular, un plan de formación no sirve absolutamente de nada si no se proporciona un feedback a los empleados, ya sea positivo o negativo. Para que un trabajador pueda mejorar sus aptitudes y absorber todos los conocimientos nuevos para aplicarlos en sus tareas diarias, es necesario que reciba un asesoramiento personalizado sobre aquellos puntos en los tiene alguna debilidad y requiere refuerzo. Mediante test en línea puedes obtener informes detallados con el porcentaje de aciertos y errores, notas totales, preguntas con más errores, etc. Toda esta información es crucial para evaluar a los trabajadores e identificar posibles mejoras a implementar en la organización.
 
