--- a/templates/plan4dim5.html
+++ b/templates/plan4dim5.html
@@ -54,11 +54,13 @@
   </head>
 <body>
 <div class="form-group">
+    <div class="text-center">
         <H1>  Plan de acción para Cultura y empleados </H1>
+    </div>
     <H3> Experto a líder </H3>
 </div>
 <div class="form-group">
-    <h5>
+    <h5><p class="p-5 bg-secondary text-white">
         Este proceso de transformación también afecta la cultura organizacional y por ende a los miembros pertenecientes a la empresa, ya que una cultura organizacional sólida impulsa el desempeño de los empleados de una empresa gracias a planes estratégicos definidos, actitudes, creencias, valores y la visión que comparte la organización con todos los que la integran. Cuando una cultura organizacional está bien definida, sirve como la dirección que guía al cumplimiento de las metas y hace que los empleados se sientan motivados a seguir ese camino, ya que se sienten parte de una empresa con la que se identifican y que da buenos resultados.
 En torno a esto debemos alinear este proceso de transformación de la cultura organizacional con la estrategia digital, para realizar esto debemos tener en consideración los objetivos, desafíos y la estrategia de la organización, para así definir la cultura deseada.
 Implementación de una cultura de aprendizaje y cambio: Es importante que su equipo comprenda que las nuevas herramientas que optimizan el rendimiento, la comunicación y el flujo de trabajo se agregarán a su rutina diaria. Solicíteles a los empleados que presenten nuevos softwares o nuevas formas de utilizar las herramientas existentes de una manera más efectiva así se podrá canalizar la información y conocimiento de mejor manera.
