--- a/templates/plan3dim5.html
+++ b/templates/plan3dim5.html
@@ -54,11 +54,13 @@
   </head>
 <body>
 <div class="form-group">
+    <div class="text-center">
         <H1>  Plan de acción para Cultura y empleados </H1>
+    </div>
     <H3> Experimentado a Experto </H3>
 </div>
 <div class="form-group">
-    <h5>Debemos recalcar que a estas alturas los miembros del equipo deben presentar un dominio considerable de las herramientas tecnológicas presentes en la organización, por lo tanto, se recomienda realizar una medición enfocada en el dominio de herramientas, en paralelo con esta evaluación conocimientos, en esta instancia se presenta la oportunidad para medir las habilidades digitales y dominio de herramientas del equipo de trabajo. Ambas problemáticas se pueden solucionar mediante test en línea y recibir el feedback de inmediato, pero es recomendable que el buen uso de herramientas tecnológicas sea medido por un profesional donde se mantenga un manual de uso actualizado y certificados.
+    <h5><p class="p-5 bg-secondary text-white">Debemos recalcar que a estas alturas los miembros del equipo deben presentar un dominio considerable de las herramientas tecnológicas presentes en la organización, por lo tanto, se recomienda realizar una medición enfocada en el dominio de herramientas, en paralelo con esta evaluación conocimientos, en esta instancia se presenta la oportunidad para medir las habilidades digitales y dominio de herramientas del equipo de trabajo. Ambas problemáticas se pueden solucionar mediante test en línea y recibir el feedback de inmediato, pero es recomendable que el buen uso de herramientas tecnológicas sea medido por un profesional donde se mantenga un manual de uso actualizado y certificados.
 Dado el caso para reforzar conocimientos del equipo de trabajo o para cuando se integre más gente al equipo, se aconseja redactar un manual de uso y manual de procedimientos para las capacitaciones que se aplican, esto ayudara a que este proceso sea más sencillo y didáctico.
 
 </h5>
