--- a/templates/basetemplate.html
+++ b/templates/basetemplate.html
@@ -65,15 +65,15 @@
               <div class="row">
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 ">
                   <div class="address">
-                    <h3>Address </h3>
+                    <h3> Address </h3>
                     <ul class="lista de preguntas">
-                      <li>
-                        <a href="{% url "encuesta" %}" ></a>Universidad Católica del Norte
-                        <br> Seminario en Sistemas de información  </li>
-                        <li>
-                          <a href="{% url "encuesta" %}"></a> </li>
-                          <li>
-                            <a href="{% url "encuesta" %}"></a>Luciano Manfredi - Carlos Ramos - Jose Castillo</li>
+
+                        <a href="{% url "encuesta" %}" ></a><p class="text-white"> Universidad Católica del Norte
+                        <br> Seminario en Sistemas de información
+
+                          <a href="{% url "encuesta" %}"></a>
+
+                            <a href="{% url "encuesta" %}"></a><p class="text-white"> <p class="text-white"> uciano Manfredi - Carlos Ramos - Jose Castillo
                           </ul>
                         </div>
                       </div>
