--- a/templates/respuesta.html
+++ b/templates/respuesta.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="text-center">
-                        <h1>Preguntas</h1>
+                        <h1>Respuesta</h1>
                     </div>
                         <h2><p class="p-2 bg-secondary text-white"> Para la evaluación de los ítems presentados se evaluaran las preguntas en un rango del 1 al 5, siendo 1 la expresión de la mínima satisfacción y el 5 la máxima satisfacción.</h2>
                     </div>
