--- a/templates/respuesta.html
+++ b/templates/respuesta.html
@@ -37,7 +37,7 @@
                    {{ form.as_p }}
 
 
-                   <button type="submit" class="btn btn-outline-primary">Agregar preguntas</button>
+                   <button type="submit" class="btn btn-outline-primary">Deberia retornar respuestas</button>
                        <div class="form-check-input">
 
                        </div>
