--- a/templates/respuesta.html
+++ b/templates/respuesta.html
@@ -10,7 +10,7 @@
                         <div class="text-center">
                         <h1>Respuesta</h1>
                     </div>
-                        <h2><p class="p-2 bg-secondary text-white"> Para la evaluación de los ítems presentados se evaluaran las preguntas en un rango del 1 al 5, siendo 1 la expresión de la mínima satisfacción y el 5 la máxima satisfacción.</h2>
+                        <h2><p class="p-2 bg-secondary text-white"> Aqui retornar formulario </h2>
                     </div>
                     <div class="col-12">
 
