--- a/templates/preguntas.html
+++ b/templates/preguntas.html
@@ -37,7 +37,7 @@
                    {{ form.as_p }}
 
 
-                   <button type="submit" class="btn btn-outline-primary">Agregar preguntas</button>
+                    <button type="submit" class="btn btn-outline-primary">Ingresar respuestas</button> </a> </td>
                        <div class="form-check-input">
 
                        </div>
