--- a/templates/respuesta.html
+++ b/templates/respuesta.html
@@ -23,6 +23,10 @@
         </div>
         <!-- Page Header End -->
 
+                   {% for a in Respuesta %}
+
+
+                   {% endfor %}
 
         <!-- Autor Start -->
 
@@ -34,7 +38,7 @@
 
                    </div>
 
-                   {{ form.as_p }}
+
 
 
                    <button type="submit" class="btn btn-outline-primary">Deberia retornar respuestas</button>
